--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: github_username/github_username.github.io
-github_url: https://github.com/github_username
-url: https://github_username.github.io
+repository: AoChen666/github_username.github.io
+github_url: https://github.com/AoChen666
+url: https://AoChen666.github.io
 enforce_ssl: ityouknow.com
 
 ## Gem
