--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ favicon: favicon.ico
 
 repository: AoChen666/github_username.github.io
 github_url: https://github.com/AoChen666
-url: http://AoChen666.github.io
+url: https://AoChen666.github.io
 enforce_ssl: ityouknow.com
 
 ## Gem
