--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:  会降低很多很多
+title: 陈大翱的博客
 subtitle: 分享技术，品味人生
-name: 黄毒蛾会 
-email: ityouknow@126.com
-description: 本站是纯洁的微笑的技术分享博客。内容涵盖生活故事、Java后端技术、Spring Boot、Spring Cloud、微服务架构、大数据演进、高可用架构、中间件使用、系统监控等相关的研究与知识分享。
-keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,Docker,生活故事,架构,大数据,一线,FastDFS,开发者,编程,代码,开源,IT网站,Developer,Programmer,Coder,Geek,IT技术博客,Java,Python,
+name: 纯洁的微笑
+email: 13147177623@163.com
+description: 本站是陈大翱的技术分享博客。内容主要是前端等相关的知识分享，也涵盖生活故事。
+keywords: aochen666,陈大翱的博客,javascript,react,webpack,nodejs,less,sass,css,html,hybrid,
 encoding: "utf-8"
 favicon: favicon.ico 
 
@@ -53,158 +53,158 @@ paginate: 12
 paginate_path: 'page:num'
 
 # Navigation. top menu list
-menus:
+# menus:
 
-  -
-    href: /python.html
-    label: Python  
-    target: _self
+#   -
+#     href: /python.html
+#     label: Python  
+#     target: _self
 
-  -
-    href: /it.html
-    label: IT
-    target: _self
+#   -
+#     href: /it.html
+#     label: IT
+#     target: _self
 
-  -
-    href: /zsxq.html
-    label: 星球
-    target: _self   
+#   -
+#     href: /zsxq.html
+#     label: 星球
+#     target: _self   
 
-  -
-    href: /life.html
-    label: 故事
-    target: _self
+#   -
+#     href: /life.html
+#     label: 故事
+#     target: _self
 
-  -
-    href: /arch.html
-    label: 架构
-    target: _self
+#   -
+#     href: /arch.html
+#     label: 架构
+#     target: _self
 
-  -
-    href: /link.html
-    label: 友链
-    target: _self
+#   -
+#     href: /link.html
+#     label: 友链
+#     target: _self
 
 
 
 # Navigation. main menu list
-navs:
+# navs:
 
-  -
-    href: /
-    label: Home
+#   -
+#     href: /
+#     label: Home
 
-  -
-    href: /spring-boot.html
-    label: Spring Boot
-    target: _self
-    subnav:
+#   -
+#     href: /spring-boot.html
+#     label: Spring Boot
+#     target: _self
+#     subnav:
 
-      -
-        subHref: /spring-boot.html
-        subLabel: Spring Boot
+#       -
+#         subHref: /spring-boot.html
+#         subLabel: Spring Boot
 
-      -
-        subHref: /spring-cloud.html
-        subLabel: Spring Cloud
+#       -
+#         subHref: /spring-cloud.html
+#         subLabel: Spring Cloud
 
-  -
-    href: /spring-cloud.html
-    label: Spring Cloud
-    target: _self
+#   -
+#     href: /spring-cloud.html
+#     label: Spring Cloud
+#     target: _self
 
-  -
+#   -
     
-    href: http://www.justdojava.com
-    label: Java
-    target: _blank
-    subnav:
+#     href: http://www.justdojava.com
+#     label: Java
+#     target: _blank
+#     subnav:
 
-      -
-        subHref: /java.html
-        subLabel: Jvm 系列文章
+#       -
+#         subHref: /java.html
+#         subLabel: Jvm 系列文章
         
-      -
-        subHref: http://www.justdojava.com
-        subLabel: Java 极客技术
-        target: _blank
+#       -
+#         subHref: http://www.justdojava.com
+#         subLabel: Java 极客技术
+#         target: _blank
 
-  -
-    href: /archives.html
-    label: Archives
-    target: _self
+#   -
+#     href: /archives.html
+#     label: Archives
+#     target: _self
 
-  -
-    href: /about.html
-    label: About
-    target: _self
+#   -
+#     href: /about.html
+#     label: About
+#     target: _self
 
 
-# labels. my blog key words
-labels:
+# # labels. my blog key words
+# labels:
 
-  -
-    href: /payment.html
-    label: 支付     
-    target: _self
+#   -
+#     href: /payment.html
+#     label: 支付     
+#     target: _self
 
-  -
-    href: /fastdfs.html
-    label: FastDFS
-    target: _blank
+#   -
+#     href: /fastdfs.html
+#     label: FastDFS
+#     target: _blank
 
-  -
-    href: /mongodb.html
-    label: MongoDB
-    target: _blank
+#   -
+#     href: /mongodb.html
+#     label: MongoDB
+#     target: _blank
 
-  -
-    href: /docker.html
-    label: Docker
-    target: _blank
+#   -
+#     href: /docker.html
+#     label: Docker
+#     target: _blank
 
-  -
-    href: /open-source.html
-    label: Code  
-    target: _blank
+#   -
+#     href: /open-source.html
+#     label: Code  
+#     target: _blank
 
-  -
-    href: /gitchat.html
-    label: Chat
-    target: _blank
+#   -
+#     href: /gitchat.html
+#     label: Chat
+#     target: _blank
 
-  -
-    href: /geektime.html
-    label: 极客
-    target: _blank
+#   -
+#     href: /geektime.html
+#     label: 极客
+#     target: _blank
 
 
 # selected articles
 classes:
 
   -
-    href: /life.html
-    name: 我的故事
-    describe: 生活就是故事，故事就是生活
+#     href: /life.html
+#     name: 我的故事
+#     describe: 生活就是故事，故事就是生活
 
-  -
-    href: /arch.html
-    name: 架构师之路
-    describe: 一个架构师的自我修养
+#   -
+#     href: /arch.html
+#     name: 架构师之路
+#     describe: 一个架构师的自我修养
 
-  -
-    href: /java.html
-    name: Java 系列文章
-    describe: Java 之根基，Java 程序员必学
+#   -
+#     href: /java.html
+#     name: Java 系列文章
+#     describe: Java 之根基，Java 程序员必学
 
 
 # ---------------- #
 #       RSS        #
 # ---------------- #
-subscribe_rss: /feed.xml
+# subscribe_rss: /feed.xml
 
 # Sidebar to show popular repo
-side_bar_repo_limit: 6 # Number of repos to show
+# side_bar_repo_limit: 6 # Number of repos to show
 
 # Google Analytics
 # analytics :
@@ -214,8 +214,8 @@ side_bar_repo_limit: 6 # Number of repos to show
 
 
 # For about.html. Fell free to create your own!
-skill_software_keywords: [Java, MySQL, Oracle, Design Patterns]
-skill_j2ee_keywords: [Spring, Struct, Hibernet, MyBatis, JSP]
+# skill_software_keywords: [Java, MySQL, Oracle, Design Patterns]
+# skill_j2ee_keywords: [Spring, Struct, Hibernet, MyBatis, JSP]
 skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, NodeJS, ExpressJS, MongoDB, Redis, PHP,  Boostrap]
 skill_mobile_app_keywords: [vuejs, hyhird app]
 
